--- a/Views/Home/TViewPageList.cshtml
+++ b/Views/Home/TViewPageList.cshtml
@@ -15,13 +15,22 @@
         <tr>
             <td>Index</td>
             <td>
+                <p>메인 home</p>
                 <a class="text-primary" asp-area="" asp-controller="Home" asp-action="Index">/Index</a>
             </td>
         </tr>
         <tr>
             <td>Login</td>
             <td>
+                <p>로그인</p>
                 <a class="text-primary" asp-area="" asp-controller="CommonAuth" asp-action="Login">/common/auth/Login</a>
+            </td>
+        </tr>
+        <tr>
+            <td>Logout</td>
+            <td>
+                <p>로그아웃</p>
+                <a class="text-primary" asp-area="" asp-controller="CommonAuth" asp-action="LogoutPage">/common/auth/Logout</a>
             </td>
         </tr>
         <tr>
@@ -33,24 +42,28 @@
         <tr>
             <td>FindIdInput</td>
             <td>
+                <p>아이디찾기</p>
                 <a class="text-primary" asp-area="" asp-controller="CommonAuth" asp-action="FindIdInput">/common/auth/FindIdInput.html</a>
             </td>
         </tr>
         <tr>
             <td>FindIdResultView</td>
             <td>
+                <p>아이디찾기 결과</p>
                 <a class="text-primary" asp-area="" asp-controller="CommonAuth" asp-action="FindIdResultView">/common/auth/FindIdResultView.html</a>
             </td>
         </tr>
         <tr>
             <td>FindPassInput</td>
             <td>
+                <p>비밀번호 찾기</p>
                 <a class="text-primary" asp-area="" asp-controller="CommonAuth" asp-action="FindPassInput">/common/auth/FindPassInput.html</a>
             </td>
         </tr>
         <tr>
             <td>FindPassResultView</td>
             <td>
+                <p>비밀번호찾기 결과</p>
                 <a class="text-primary" asp-area="" asp-controller="CommonAuth" asp-action="FindPassResultView">/common/auth/FindPassResultView.html</a>
             </td>
         </tr>
@@ -63,18 +76,21 @@
         <tr>
             <td>MemberReg</td>
             <td>
+                <p>회원가입 정보입력</p>
                 <a class="text-primary" asp-area="" asp-controller="CommonMember" asp-action="MemberReg">/common/member/MemberReg.html</a>
             </td>
         </tr>
         <tr>
             <td>MemberRegFinished</td>
             <td>
+                <p>회원가입 결과</p>
                 <a class="text-primary" asp-area="" asp-controller="CommonMember" asp-action="MemberRegFinished">/common/member/MemberRegFinished.html</a>
             </td>
         </tr>
         <tr>
             <td>MyInfoRead</td>
             <td>
+                <p>내정보 보기</p>
                 <a class="text-primary" asp-area="" asp-controller="MemberMypage" asp-action="MyInfoRead">/member/mypage/MyInfoRead.html</a>
             </td>
         </tr>
@@ -87,12 +103,21 @@
         <tr>
             <td>MyInfoUpdate</td>
             <td>
+                <p>내정보 수정</p>
                 <a class="text-primary" asp-area="" asp-controller="MemberMypage" asp-action="MyInfoUpdate">/member/mypage/MyInfoUpdate.html</a>
+            </td>
+        </tr>
+        <tr>
+            <td>MyInfoUpdate</td>
+            <td>
+                <p>내정보 수정</p>
+                <a class="text-primary" asp-area="" asp-controller="MemberMypage" asp-action="MyInfoUpdateConfirm">/member/mypage/MyInfoUpdateConfirm.html</a>
             </td>
         </tr>
         <tr>
             <td>MyInfoDelete</td>
             <td>
+                <p>내정보 삭제</p>
                 <a class="text-primary" asp-area="" asp-controller="MemberMypage" asp-action="MyInfoDelete">/member/mypage/MyInfoDelete.html</a>
             </td>
         </tr>
