--- a/Views/Member/Mypage/MyInfoUpdateConfirm.cshtml
+++ b/Views/Member/Mypage/MyInfoUpdateConfirm.cshtml
@@ -3,6 +3,7 @@
     // 회원관리 - 가입
     
     ViewData["Title"] = "MemberRegFinished Page";
+    @model Ki4C_Solution.Models.Common.Member.MemberRegModel
 }
 
 <div class="d-flex align-items-center vh-100">
@@ -12,7 +13,8 @@
         <h1 class="display-4">            
             <img src="~/images/logo.png" alt="logo" width="80%" height="80%" />
         </h1>
-        <p class="lead text-muted">회원가입을 축하합니다. </p>
+        <p class="lead text-muted">회원 정보ID 입력란  </p>
+        <p class="lead text-muted">회원정보를 수정하였습니다.  </p>
         <a class="btn btn-primary" asp-area="" asp-controller="Home" asp-action="index">메인으로 이동</a>
       </div>
     </div>
