--- a/Views/Common/Auth/FindIdInput.cshtml
+++ b/Views/Common/Auth/FindIdInput.cshtml
@@ -5,38 +5,75 @@
     @model Ki4C_Solution.Models.Common.Auth.CreateAccountModel;
 }
 
-<div class="text-center">
-    <h1 class="display-4">Find Id Input Page</h1>
-    <p>Find Id Input Page.</p>
-</div>
 <!-- Find Id page-->
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-5">
             <div class="card shadow-lg border-0 rounded-lg mt-5">
-                <div class="card-header"><h3 class="text-center font-weight-light my-4">Find Id</h3></div>
+                <div class="card-header"><h3 class="text-center font-weight-light my-4">아이디 찾기</h3></div>
                 <div class="card-body">
-                    <form asp-controller="CommonAuth" asp-action="FindId" method="post">
+                    <form asp-controller="CommonAuth" asp-action="FindId" method="post" id="input-form">
                         <div class="form-floating mb-3">
                             <input class="form-control" id="Input_Name" type="text" placeholder=" " asp-for="Name" />
-                            <label for="Input_Name">Name</label>
+                            <label for="Input_Name">사용자 이름<a style="color: red;">*</a></label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="Input_Email" type="email" placeholder=" " asp-for="Email" />
-                            <label for="Input_Email">Email address</label>
+                            <input class="form-control" id="Input_Email" type="email" placeholder=" " asp-for="Email" oninput="this.value=this.value.replace(/(\s*)/g,'').replace(/[^a-zA-Z0-9~!@@#$%^&*()_+|<>?:{}]/g,'').replace(/[^ㄱ-ㅎ|ㅏ-ㅣ|가-힣]/g,'').replace(/[^a-zA-Z0-9]/g,'').replace(/[^0-9]/g,'').replace(/[^-]/g,'').replace(/[^-]/g,'').replace(/[^@@]/g,'');"/>
+                            <label for="Input_Email">이메일 주소<a style="color: red;">*</a></label>
                         </div>
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="Input_Phone" type="text" placeholder=" " asp-for="Phone" />
-                            <label for="Input_Phone">Phone Number</label>
+                            <input class="form-control" id="Input_Phone" type="text" placeholder=" " asp-for="Phone"  oninput="this.value=this.value.replace(/(\s*)/g,'').replace(/[^a-zA-Z0-9~!@@#$%^&*()_+|<>?:{}]/g,'').replace(/[^ㄱ-ㅎ|ㅏ-ㅣ|가-힣]/g,'').replace(/[^a-zA-Z0-9]/g,'').replace(/[^0-9]/g,'');"/>
+                            <label for="Input_Phone">휴대폰 번호<a style="color: red;">*</a></label>
                         </div>
-                        <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                            <button class="btn btn-primary" type="submit">Find Id</button>
+                        <div class="d-flex justify-content-center mt-4 mb-0">
+                            <button class="btn btn-primary" type="submit">아이디 찾기</button>
                         </div>
                     </form>
                 </div>
-                <div class="card-footer text-center py-3">
-                    <div class="small"><a href="login">Login</a></div>
+                <div class="card-footer text-center py-3 d-flex justify-content-center">
+                    <div class="small m-2"><a class="btn btn-primary" asp-area="" asp-controller="CommonAuth" asp-action="Login">로그인</a></div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+<script>
+    let FindIdInputJS = {
+        init: function () {
+            this.setEvent();
+        },
+        setEvent: function () {
+            $('#input-form').submit(function (e) {
+                e.preventDefault();
+                let name = $('#Input_Name').val();
+                let email = $('#Input_Email').val();
+                let phone = $('#Input_Phone').val();
+                if (FindIdInputJS.isEmpty(name)) {
+                    alert('사용자 이름을 입력해주세요.');
+                    return;
+                }
+                if (FindIdInputJS.isEmpty(email)) {
+                    alert('이메일을 입력해주세요.');
+                    return;
+                }
+                if (FindIdInputJS.isEmpty(phone)) {
+                    alert('휴대폰 번호를 입력해주세요.');
+                    return;
+                }
+                this.submit();
+            });
+        },
+        isEmpty: function (value) {
+            if (value == null || value == undefined || value == "") {
+                return true;
+            } else {
+                return false;
+            }
+        }
+    }
+
+    $(document).ready(function () {
+        FindIdInputJS.init();
+    });
+
+</script>
