--- a/Views/Common/Auth/Login.cshtml
+++ b/Views/Common/Auth/Login.cshtml
@@ -2,42 +2,149 @@
     // Used Table [Login, Member]
     //메인 - 로그인
     ViewData["Title"] = "Login Page";
-
     @model Ki4C_Solution.Models.Common.Auth.LoginModel
+
 }
-
-
-<div class="text-center">
-    <h1 class="display-4">Login Page</h1>
-    <p>Login Page.</p>
-</div>
-
-<!-- bootstrap5 style login form -->
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-5">
             <div class="card shadow-lg border-0 rounded-lg mt-5">
-                <div class="card-header"><h3 class="text-center font-weight-light my-4">Login</h3></div>
+                <div class="card-header">
+                    <h3 class="text-center font-weight-light my-4"><img src="~/images/logo.png" alt="logo" width="80%" height="80%" /></h3>
+                    
+                    <h3 class="text-center font-weight-light my-4">로그인</h3></div>
                 <div class="card-body">
-                    <form asp-controller="CommonAuth" asp-action="Login" method="post">
+                    <form asp-controller="CommonAuth" asp-action="Login" method="post" id="input-form">
                         <div class="form-floating mb-3">
-                            <input class="form-control" id="Input_Email" type="email" placeholder=" " asp-for="Email" />
-                            <label for="Input_Email">Email address</label>
+                            <input class="form-control" id="Input_Id" type="email" placeholder=" " asp-for="Id" />
+                            <label for="Input_Email">아이디<a style="color: red;">*</a></label>
                         </div>
                         <div class="form-floating mb-3">
                             <input class="form-control" id="Input_Password" type="password" placeholder=" " asp-for="Password" />
-                            <label for="Input_Password">Password</label>
+                            <label for="Input_Password">비밀번호<a style="color: red;">*</a></label>
                         </div>
-                        <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
+                        <div class="d-flex justify-content-center mt-4 mb-0">
                             <button class="btn btn-primary" type="submit">Login</button>
                         </div>
                     </form>
                 </div>
-                <div class="card-footer text-center py-3">
-                    <div class="small"><a href="register">Need an account? Sign up!</a></div>
+                <div class="card-footer text-center py-3 d-flex justify-content-center">
+                    <div class="small m-2"><a class="btn btn-primary" asp-area="" asp-controller="CommonMember" asp-action="MemberReg">회원가입</a></div>
+                    <div class="small m-2"><a class="btn btn-primary" asp-area="" asp-controller="CommonAuth" asp-action="FindIdInput">아이디 찾기</a></div>
+                    <div class="small m-2"><a class="btn btn-primary" asp-area="" asp-controller="CommonAuth" asp-action="FindPassInput">비밀번호 찾기</a></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+<!-- Modal -->
+<div class="modal fade" id="loginFailModal" tabindex="-1" role="dialog" aria-labelledby="loginFailModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="loginFailModalLabel">로그인 실패</h5>
+                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p id="resultText">@ViewData["ResultText"]</p>
+                <p>등록되지 않은 아이디이거나 아이디 또는 비밀번호를 잘못 입력했습니다.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary closeBtn" data-dismiss="modal">닫기</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- The Modal -->
+<div class="modal fade" id="loginSuccessModal" tabindex="-1" role="dialog" aria-labelledby="loginSuccessModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="loginSuccessModalLabel">로그인 성공</h5>
+                <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>XXX 고객님 로그인 하였습니다. 메인페이지로 이동합니다.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary closeBtn" data-dismiss="modal">닫기</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    let LoginJS = {
+        init: function () {
+            this.setEvent();
+        },
+        setEvent: function () {
+            $('#input-form').submit(function (e) {
+                e.preventDefault();
+                let id = $('#Input_Id').val();
+                //let email = $('#Input_Email').val();
+                let password = $('#Input_Password').val();
+                if (LoginJS.isEmpty(id)) {
+                    alert('아이디를 입력해주세요.');
+                    return;
+                }
+                //if (LoginJS.isEmpty(email)) {
+                //    alert('이메일을 입력해주세요.');
+                //    return;
+                //}
+                if (LoginJS.isEmpty(password)) {
+                    alert('비밀번호를 입력해주세요.');
+                    return;
+                }
+                this.submit();
+            });
+        },
+        isEmpty: function (value) {
+            if (value == null || value == undefined || value == "") {
+                return true;
+            } else {
+                return false;
+            }
+        },
+        loginAPI : function(){
+            let id = $('#Input_Id').val();
+            let password = $('#Input_Password').val();
+            let data = {
+                Id: id,
+                Password: password
+            };
+            $.ajax({
+                url: '/api/Common/Auth/Login',
+                type: 'POST',
+                data: data,
+                success: function (data) {
+                    if (data.result) {
+                        alert('로그인 성공');
+                        $('#loginSuccessModal').modal('show');
+                        //location.href = '/Home/Index';
+                    } else {
+                        $('#loginFailModal').modal('show');
+                    }
+                },
+                error: function (request, status, error) {
+                    $('#loginFailModal').modal('show');
+                }
+            });
+        }
+    }
+    
+    $(document).ready(function () {
+        LoginJS.init();
+        if ($("#resultText").text() != ""){
+            $('#loginFailModal').modal('show');
+        }
+    });
+
+    $(".btn-close, .closeBtn").click(function () {
+        $('#loginFailModal').modal('hide');
+        $('#loginSuccessModal').modal('hide');
+    });
+
+</script>
