--- a/Views/Member/Mypage/MyInfoRead.cshtml
+++ b/Views/Member/Mypage/MyInfoRead.cshtml
@@ -2,9 +2,85 @@
     // Used Table [Member]
     // 마이페이지 - 내정보 보기
     ViewData["Title"] = "MyInfoRead Page";
+    @model Ki4C_Solution.Models.Common.Member.MemberRegModel
 }
 
-<div class="text-center">
-    <h1 class="display-4">MyInfoRead Page</h1>
-    <p>MyInfoRead Page.</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-5">
+            <div class="card shadow-lg border-0 rounded-lg mt-5">
+                <div class="card-header">
+                    <h3 class="text-center font-weight-light my-4">내정보 보기</h3>
+                    <div class="d-flex justify-content-end">
+                        <a href="#">Home</a> &gt; 내정보 보기
+                    </div>
+                </div>
+                <div class="card-body">
+                    <form asp-controller="MemberMypage" asp-action="MyInfoUpdate" method="post" id="input-form">
+                        <div class="d-flex justify-content-end mt-0 mb-2">
+                            <button type="submit" class="btn btn-primary btn-block">수정</button>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Id" type="text" placeholder=" " asp-for="ID" value="@Model.ID" readonly />
+                            <label for="input-Id">아이디<a style="color: red;">*</a></label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Password" type="password" placeholder=" " asp-for="Password" value="" readonly />
+                            <label for="input-Password">비밀번호<a style="color: red;">*</a></label>
+                        </div>
+
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Password-Check" type="password" placeholder=" " asp-for="PasswordConfirm" value="" readonly />
+                            <label for="input-Password-Check">비밀번호 확인<a style="color: red;">*</a></label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Name" type="text" placeholder=" " asp-for="Name" value="@Model.Name" readonly />
+                            <label for="input-Name">이름<a style="color: red;">*</a></label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Email" type="email" placeholder=" " asp-for="Email" value="@Model.Email" readonly/>
+                            <label for="input-Email">이메일<a style="color: red;">*</a></label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Phone" type="text" placeholder=" " asp-for="Phone" value="@Model.Phone" readonly />
+                            <label for="input-Phone">휴대폰 번호<a style="color: red;">*</a></label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Address" type="text" placeholder=" " asp-for="Address" value="@Model.Address" readonly/>
+                            <label for="input-Address">주소<a style="color: red;">*</a></label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Address-Detail" type="text" placeholder=" " asp-for="AddressDetail" value="@Model.AddressDetail" readonly />
+                            <label for="input-Address-Detail">상세 주소<a style="color: red;">*</a></label>
+                        </div>
+                        <!-- 주민 번호-->
+                        @*
+                        <div class="form-floating mb-3">
+                        <input class="form-control" id="input-Resident-Number" type="text" placeholder=" " asp-for="ResidentNumber" readonly/>
+                        <label for="input-Resident-Number">주민번호</label>
+                        </div>
+                        *@
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Company" type="text" placeholder=" " asp-for="Company" value="@Model.Company" readonly />
+                            <label for="input-Company">회사명<a style="color: red;">*</a></label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Department" type="text" placeholder=" " asp-for="Department" value="@Model.Department" readonly />
+                            <label for="input-Department">부서명</label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input class="form-control" id="input-Position" type="text" placeholder=" " asp-for="Position" value="@Model.Position" readonly/>
+                            <label for="input-Position">직급</label>
+                        </div>
+                        <div class="d-flex justify-content-center mt-4 mb-0">
+                            <button type="submit" class="btn btn-primary btn-block">수정</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="card-footer text-center py-3 d-flex justify-content-center">
+                    <div class="small m-2"><a class="btn btn-primary" asp-area="" asp-controller="Home" asp-action="index">메인으로 이동</a></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
