--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,11 +4,114 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+@*<div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-
-
+</div>*@
+<article class="slider">
+    <img src="~/index/images/p-images/section1_bg.png" alt="">
+</article>
+<section class="content">
+    <section class="display-section">
+        <div class="container">
+            <h2 class="sec-tit"><a href="#">무료체험</a></h2>
+            <p class="desc">AI 기반 DX진단 Service : 국내 창업기업, 중소기업, 중견기업 대상 DT역량 진단</p>
+        </div>
+    </section>
+    <section class="promotion-section">
+        <div class="container">
+            <ul class="promo-list">
+                <li>
+                    <a href="">
+                        <img src="~/index/images/s-images/promo01.png" alt="">
+                        <h3>조합소개</h3>
+                        <p>케이아이포씨 협동조합, 디지털 트랜스포메이션 진단 및 컨설팅 서비스 제공</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="~/index/images/s-images/promo02.png" alt="">
+                        <h3>WE ARE</h3>
+                        <p>디지털 트랜스포메이션(DT) 역량진단 사업</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="~/index/images/s-images/promo03.png" alt="">
+                        <h3>WORK</h3>
+                        <p>문제를 정확히 진단하고 컨설팅하라</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="~/index/images/s-images/promo04.png" alt="">
+                        <h3>주요사업</h3>
+                        <p>디지털 트랜스포메이션(이하 DT) 역량진단/교육/기술지원•자문•컨설팅/학술연구•정책용역•서비스/각종 특허 및 기술 정보 제공</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <hr class="divider">
+    <section class="work-section cfixed">
+        <h2 class="sec-tit">WORK</h2>
+        <ul class="work-list">
+            <li>
+                <a href="">
+                    <div class="info">
+                        <h3>역량진단 사업</h3>
+                        <span>WEB/PRINT</span>
+                    </div>
+                    <img src="~/index/images/p-images/main_icon1.png" style="width:50%; height:50%" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div class="info">
+                        <h3>교육사업</h3>
+                        <span>WEB/PRINT</span>
+                    </div>
+                    <img src="~/index/images/p-images/main_icon2.png" style="width:50%; height:50%" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div class="info">
+                        <h3>기술지원자문 컨설팅 사업</h3>
+                        <span>WEB/PRINT</span>
+                    </div>
+                    <img src="~/index/images/p-images/main_icon3.png" style="width:50%; height:50%" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div class="info">
+                        <h3>정부기관 정책 용역 사업</h3>
+                        <span>WEB/PRINT</span>
+                    </div>
+                    <img src="~/index/images/p-images/main_icon4.png" style="width:50%; height:50%" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div class="info">
+                        <h3>특허 기술 정보 제공 사업</h3>
+                        <span>WEB/PRINT</span>
+                    </div>
+                    <img src="~/index/images/p-images/main_icon5.png" style="width:50%; height:50%" alt="">
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <div class="info">
+                        <h3>...</h3>
+                        <span>WEB/PRINT</span>
+                    </div>
+                    <img src="" style="width:50%; height:50%" alt="">
+                </a>
+            </li>
+        </ul>
+    </section>
+    <hr class="m-divider">
 
 
